--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "software-js",
+  "name": "software",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "This project was bootstrapped with Fastify-CLI.",
+  "main": "app.js",
   "scripts": {
     "test:acceptance:services": "cucumber-js",
     "test:acceptance:domain": "cucumber-js -p domain",
     "test:acceptance": "pnpm test:acceptance:domain && pnpm test:acceptance:services",
-    "test": "jest"
+    "test": "tap \"test/**/*.test.js\"",
+    "start": "fastify start -l info app.js",
+    "dev": "fastify start -w -l info -P app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +17,9 @@
   "devDependencies": {
     "@cucumber/cucumber": "^9.1.0",
     "chai": "^4.3.7",
-    "jest": "^29.5.0"
+    "fastify-cli": "^5.7.1",
+    "jest": "^29.5.0",
+    "tap": "^16.1.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -32,6 +36,22 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "uuid": "^9.0.0"
-  }
+    "uuid": "^9.0.0",
+    "fastify": "^4.0.0",
+    "fastify-plugin": "^4.0.0",
+    "@fastify/autoload": "^5.0.0",
+    "@fastify/sensible": "^5.0.0",
+    "fastify-cli": "^5.7.1"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cherifGsoul/js-software-engineering.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cherifGsoul/js-software-engineering/issues"
+  },
+  "homepage": "https://github.com/cherifGsoul/js-software-engineering#readme"
 }
